fixed top bar spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,12 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    color: #ffffff;
-
 }
 
 body {
     background-color: #d9dcd6;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #ffffff;
 }
 
 header {
@@ -25,8 +24,14 @@ h1 {
 
 #seo {
     color: #d9dcd6;
-}
+} 
 
+header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-size: 20px;
+}
 header div ul li {
     display: inline-block;
     margin-left: 25px;
@@ -169,6 +174,7 @@ footer {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    color:black;
 }
 
 h {
